; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_assoc.c_odd_min9_is_prime.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_assoc.c_odd_min9_is_prime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @odd_min9_is_prime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @odd_min9_is_prime(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 3, i64* %4, align 8
  br label %5

5:                                                ; preds = %17, %1
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = mul i64 %6, %7
  %9 = load i64, i64* %3, align 8
  %10 = icmp ule i64 %8, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %5
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = urem i64 %12, %13
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %21

17:                                               ; preds = %11
  %18 = load i64, i64* %4, align 8
  %19 = add i64 %18, 2
  store i64 %19, i64* %4, align 8
  br label %5

20:                                               ; preds = %5
  store i32 1, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %16
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
